# inequality

./: .coveragerc  .gitattributes  .pre-commit-config.yaml  .travis.yml  README.md  api.html  codecov.yml  conftest.py  contributing.md  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  readthedocs.yml  references.html  requirements.txt  requirements_docs.txt  requirements_tests.txt  search.html  searchindex.js  setup.cfg  setup.py  tutorials.html
.github/workflows/: build_docs.yml  release_and_publish.yml  testing.yml  versioneer.yml
_modules/: index.html
_modules/inequality/: atkinson.html  gini.html  pen.html  schutz.html  theil.html  wolfson.html
_sources/: api.rst.txt  index.rst.txt
_sources/notebooks/: gini.ipynb.txt
_sources/user-guide/: intro.rst.txt
_sources/user-guide/measure/: theil.ipynb.txt
_sources/user-guide/viz/: intro.rst.txt
_static/: references.bib
_static/auto/: references.el
ci/: 310-DEV.yaml  310-MIN.yaml  310-oldest.yaml  310.yaml  311-DEV.yaml  311-latest.yaml  311-oldest.yaml  311.yaml  312-DEV.yaml  312-dev.yaml  312-latest.yaml  312.yaml  313-dev.yaml  313-latest.yaml  314-dev.yaml  314-latest.yaml  38.yaml  39.yaml
doc/: conf.py  index.rst
doc/_build/doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  references.doctree
doc/_build/html/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  references.html  search.html  searchindex.js
doc/_build/html/_modules/: index.html
doc/_build/html/_modules/inequality/: gini.html  theil.html
doc/_build/html/_sources/: index.rst.txt
doc/_static/: references.bib
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  tutorials.rst
docs/_static/: references.bib
docs/user-guide/measure/: decompositions.ipynb  gini.ipynb  intro.rst  theil.ipynb  wolfson.ipynb  wolfson_spatial.ipynb
docs/user-guide/viz/: pengram.ipynb  schutz.ipynb  weighted.dbf  weighted.shp  weighted.shx
inequality/: __init__.py  _indices.py  _version.py  atkinson.py  gini.py  pen.py  schutz.py  theil.py  utils.py  wolfson.py
inequality/tests/: conftest.py  test_atkinson.py  test_gini.py  test_indices.py  test_interface.py  test_pengram.py  test_schutz.py  test_theil.py  test_wolfson.py
notebooks/: gini.html  gini.ipynb  pengram.ipynb  shutz.ipynb
user-guide/: intro.html
user-guide/measure/: gini.html  gini.ipynb  intro.html  theil.html  wolfson.html
user-guide/viz/: intro.html  pengram.html  schutz.html
