[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "inequality"
dynamic = ["version"]
authors = [
    { name = "PySAL Developers", email = "pysal-dev@googlegroups.com" },
]
maintainers = [{ name = "PySAL Developers" }]
license = { text = "BSD 3-Clause" }
description = "inequality: Spatial inequality analysis"
keywords = ["spatial statistics", "spatial inequality"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.10"
dependencies = [
    "libpysal>=4.5",
    "numpy>=1.23",
    "scipy>=1.8",
]

[project.urls]
Home = "https://github.com/pysal/inequality/"
Repository = "https://github.com/pysal/inequality"

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "ruff",
]
docs = [
    "nbsphinx",
    "numpydoc",
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinx-gallery",
    "sphinx_bootstrap_theme",
]
tests = [
    "codecov",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[tool.setuptools.packages.find]
include = ["inequality", "inequality.*"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "N", "B", "A", "C4", "SIM", "ARG"]
target-version = "py310"
ignore = [
    "B006",
    "B008",
    "B009",
    "B010",
    "C408",
    "E731",
    "N803",
    "N806",
    "N999",
    "UP007"
]
exclude = ["inequality/tests/*", "docs/*"]
[tool.ruff.per-file-ignores]
"*__init__.py" = [
    "F401",  # imported but unused
    "F403",  # star import; unable to detect undefined names
]


[tool.coverage.run]
source = ["./inequality"]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "except ModuleNotFoundError:",
    "except ImportError",
]
ignore_errors = true
omit = ["inequality/tests/*", "docs/conf.py"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The numba package is used",
    "ignore:numba cannot be imported",
    "ignore:Numba not imported",
    "ignore:The weights matrix is not fully connected",
    "ignore:You are trying to build a full W object from",
    "ignore:Multiple layers detected. Using first layer as default",
    "ignore:Geometry is in a geographic CRS",
    "ignore:`use_index` defaults to False",
    "ignore:Objects based on the `Geometry` class will deprecated",
    "ignore:PolygonLocator is deprecated",
    "ignore:SegmentGrid is deprecated",
    "ignore:In the next version of libpysal, observations with no neighbors",
    "ignore:divide by zero encountered",
    "ignore:invalid value encountered",
]