

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "inequality"
dynamic = ["version"]
authors = [
    { name = "PySAL Developers", email = "pysal-dev@googlegroups.com" },
]
maintainers = [{ name = "PySAL Developers" }]
license = { text = "BSD 3-Clause" }
description = "inequality: Spatial inequality analysis"
keywords = ["spatial statistics", "spatial inequality"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.10"
dependencies = [
    "libpysal>=4.5",
    "matplotlib>=3.6",
    "numpy>=1.23",
    "scipy>=1.8",
]

[project.urls]
Home = "https://github.com/pysal/inequality/"
Repository = "https://github.com/pysal/inequality"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
]
docs = [
    "nbsphinx",
    "numpydoc",
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinx-gallery",
    "sphinx_bootstrap_theme",
    "pydata-sphinx-theme"
]
tests = [
    "codecov",
    "mapclassify",
    "jupyterlab",
    "folium",
    "pytest",
    "seaborn",
    "pytest-cov",
    "pytest-xdist",
]
pen = [
    "matplotlib",
    "seaborn",
    "pandas",
]
[tool.setuptools.packages.find]
include = ["inequality", "inequality.*"]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B", "A", "C4", "SIM", "ARG"]
exclude = ["inequality/tests/*", "docs/*"]

[tool.ruff.lint.per-file-ignores]
"*__init__.py" = [
    "F401",  # imported but unused
]

[tool.coverage.run]
source = ["./inequality"]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "except ModuleNotFoundError:",
    "except ImportError",
]
ignore_errors = true
omit = ["inequality/tests/*", "docs/conf.py"]
 
